--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <!-- include the css and js file -->
 <link href="jquery.lwMultiSelect.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="jquery.lwMultiSelect.min.js"></script>
+<!-- link to main stylesheet -->
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 
 <body>
