--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 <!-- include the css and js file -->
 <link href="jquery.lwMultiSelect.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="jquery.lwMultiSelect.min.js"></script>
-<!-- link to main stylesheet -->
-<link rel="stylesheet" type="text/css" href="/css/main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#157878">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/assets/css/style.css?v=4dcda94c8a5b4bf0e7802d7df27da35df763058a">
 </head>
-
 <body>
+<section class="page-header">
+<h1 class="project-name">keyo321.github.io</h1>
+<h2 class="project-tagline"></h2>
+
+
+</section>
 
   <h1 class="page_title">jQuery Plugin: Light Weight MultiSelect</h1>
 
